<resources>
    <string name="app_name">Conexión con la BD</string>
    <string name="title_activity_contenedor">Workyapp</string>
    <string name="title_home">GYM</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Usuario</string>
    <string name="gym">GYM</string>
    <string name="rutinas">Rutinas</string>
    <string name="usuario">Usuario</string>
    <string name="informacion">Información</string>
    <string name="registrar">Registrar usuario</string>
    <string name="recomendaciones">recomendaciones</string>
    <string name="plan">Plan alimenticio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contacto">contacto</string>
    <string name="idioma">idioma</string>
    <string name="explorar_rutinas">Explorar rutinas</string>
    <string name="nueva_rutina">Nueva rutina</string>
    <string name="piernas_y_gl_teos">Piernas y glúteos</string>
    <string name="aumentar_masa_muscular">Aumentar masa muscular</string>
    <string name="cuerpo_completo">Cuerpo completo</string>
    <string name="espalda_ancha">Espalda ancha</string>
    <string name="m_sculos_grandes">Músculos grandes</string>
    <string name="gl_teos_definidos">Glúteos definidos</string>
    <string name="pecho_brutal">Pecho brutal</string>
    <string name="abdomen_fuerte_y_marcado">Abdomen fuerte y marcado</string>
    <string name="definici_n_muscular">Definición muscular</string>
</resources>