<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mostrar">


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="427dp"
        android:layout_height="84dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn1"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/piernas_y_gl_teos"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/aumentar_masa_muscular"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/cuerpo_completo"
            tools:ignore="NotSibling" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="427dp"
        android:layout_height="84dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn4"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/espalda_ancha"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/m_sculos_grandes"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/gl_teos_definidos"
            tools:ignore="NotSibling" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="427dp"
        android:layout_height="84dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn7"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="22dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/pecho_brutal"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/abdomen_fuerte_y_marcado"
            tools:ignore="NotSibling" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="126dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/definici_n_muscular"
            tools:ignore="NotSibling" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

