<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ui.notifications.NotificationsFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="102dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:srcCompat="@drawable/user_image"
        app:strokeColor="#009688"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:drawableRight="@drawable/outline_info_24"
        android:text="@string/informacion"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:strokeColor="#009688"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/stat"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:drawableRight="@drawable/baseline_bar_chart_24"
        android:text="@string/registrar"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan"
        app:strokeColor="#009688"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/recomendacion"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:drawableRight="@drawable/outline_recommend_24"
        android:text="@string/recomendaciones"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stat"
        app:strokeColor="#009688"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/plan"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:drawableRight="@drawable/outline_emoji_food_beverage_24"
        android:text="@string/plan"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:strokeColor="#009688"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/btncontacto"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/black"
        android:text="@string/contacto"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#009688"
        app:strokeWidth="4dp" />

    <Button
        android:id="@+id/boton2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="92dp"
        android:backgroundTint="@color/black"
        android:text="@string/idioma"
        app:layout_constraintBottom_toTopOf="@+id/info"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#009688"
        app:strokeWidth="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>